@@ -25,8 +25,8 @@
 
 package com.softwarementors.extjs.djn.router.processor;
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import javax.annotation.CheckForNull;
+import javax.annotation.Nonnull;
 
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
@@ -37,9 +37,8 @@ import com.softwarementors.extjs.djn.gson.GsonBuilderConfigurator;
 import com.softwarementors.extjs.djn.gson.GsonBuilderConfiguratorException;
 import com.softwarementors.extjs.djn.gson.JsonException;
 import com.softwarementors.extjs.djn.router.dispatcher.Dispatcher;
-
-import javax.annotation.CheckForNull;
-import javax.annotation.Nonnull;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public abstract class RequestProcessorBase {
   
@@ -119,18 +118,12 @@ public abstract class RequestProcessorBase {
   private GsonBuilderConfigurator createGsonBuilderConfigurator() {
     Class<? extends GsonBuilderConfigurator> configuratorClass = getGlobalConfiguration().getGsonBuilderConfiguratorClass(); 
     try {
-      return configuratorClass.newInstance();
+      return configuratorClass.getConstructor().newInstance();
     }
-    catch (InstantiationException e) {
+    catch (Exception e) {
       GsonBuilderConfiguratorException ex = GsonBuilderConfiguratorException.forUnableToInstantiateGsonBuilder(configuratorClass, e);
       logger.error( ex.getMessage(), ex);
       throw ex;
     }
-    catch (IllegalAccessException e) {
-      GsonBuilderConfiguratorException ex = GsonBuilderConfiguratorException.forUnableToInstantiateGsonBuilder(configuratorClass, e);
-      logger.error( ex.getMessage(), ex);
-      throw ex;
-    }     
   }
-  
 }
